; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/midi/extr_midi.c_midi_send_array.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/midi/extr_midi.c_midi_send_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @midi_send_array(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca [3 x i32], align 4
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  store i64 0, i64* %7, align 8
  br label %10

10:                                               ; preds = %41, %3
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp slt i64 %11, %12
  br i1 %13, label %14, label %44

14:                                               ; preds = %10
  %15 = bitcast [3 x i32]* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %15, i8 0, i64 12, i1 false)
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %7, align 8
  %18 = sub nsw i64 %16, %17
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = icmp sgt i64 %19, 3
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  br label %24

22:                                               ; preds = %14
  %23 = load i64, i64* %9, align 8
  br label %24

24:                                               ; preds = %22, %21
  %25 = phi i64 [ 3, %21 ], [ %23, %22 ]
  store i64 %25, i64* %9, align 8
  %26 = getelementptr inbounds [3 x i32], [3 x i32]* %8, i64 0, i64 0
  %27 = load i32*, i32** %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = getelementptr inbounds i32, i32* %27, i64 %28
  %30 = load i64, i64* %9, align 8
  %31 = call i32 @memcpy(i32* %26, i32* %29, i64 %30)
  %32 = load i32*, i32** %4, align 8
  %33 = load i64, i64* %9, align 8
  %34 = getelementptr inbounds [3 x i32], [3 x i32]* %8, i64 0, i64 0
  %35 = load i32, i32* %34, align 4
  %36 = getelementptr inbounds [3 x i32], [3 x i32]* %8, i64 0, i64 1
  %37 = load i32, i32* %36, align 4
  %38 = getelementptr inbounds [3 x i32], [3 x i32]* %8, i64 0, i64 2
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @midi_send_data(i32* %32, i64 %33, i32 %35, i32 %37, i32 %39)
  br label %41

41:                                               ; preds = %24
  %42 = load i64, i64* %7, align 8
  %43 = add nsw i64 %42, 3
  store i64 %43, i64* %7, align 8
  br label %10

44:                                               ; preds = %10
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #2

declare dso_local i32 @midi_send_data(i32*, i64, i32, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
